# Argus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  eval-freeze.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
backend/: anomaly_detector.py  anomaly_train.py  corpus_provider.py  dependencies.py  detector.py  main.py  seed_corpus.py  supervisor_provider.py  worker.py
backend/agents/: __init__.py  enrichment.py  response.py  triage.py
backend/domain/: anomaly.py  corpus.py  dashboard.py  detector.py  enrichment.py  eval.py  feedback.py  health.py  incident.py  llm.py  memory.py  pipeline.py  redaction.py  response.py  telemetry.py  triage.py
backend/eval/: __init__.py  __main__.py  harness.py  judge.py  report.py  thresholds.py
backend/infra/: anomaly_model.py  auth.py  blob.py  cache.py  config.py  container.py  corpus.py  dashboard.py  db.py  executors.py  guardrails.py  health.py  intel.py  lifespan.py  llm.py  llm_drivers.py  logging.py  memory.py  observability.py  queue.py  redaction.py  supervisor_provider.py  trace_repository.py  tracing.py  vault.py
backend/repositories/: __init__.py  approvals.py  audit.py  corpus.py  incidents.py
backend/routers/: __init__.py  approvals.py  auth.py  health.py  incidents.py  ingest.py
backend/services/: __init__.py  anomaly.py  auth.py  corpus.py  dashboard_stream.py  detector.py  feedback.py  grounding.py  intake.py  kpis.py  memory.py  pipeline.py  pipeline_view.py  supervisor.py  wazuh.py
config/: alembic.ini  eval_thresholds.yaml
deploy/api/: Dockerfile
deploy/frontend/: Dockerfile  nginx.conf
deploy/vault/: seed.sh
docs/: README.md  anomal-detector-mechanism.md  demo-playbook.md  incident-workflow.mmd  pipeline-end-to-end.md  presentation-script.md  seeding-architecture.md  siem-ml-detector.md
docs/resources/: SOAR_Explained.docx  SOAR_Plan.md  SOAR_brief.md  notes.txt
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  router.tsx
frontend/tests/: approvals.test.tsx  auth.test.tsx  branch-breakdown.test.tsx  evidence-panel.test.tsx  human-attention-lane.test.tsx  human-attention-page.test.tsx  incident-drawer.test.tsx  incident.test.tsx  journey-overlay.test.tsx  journey-trace.test.tsx  kpis.test.tsx  pipeline-map.test.tsx  pipeline.test.tsx  queue.test.tsx  stage-statuses.test.ts  stream.test.tsx  trace.test.tsx
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  manifest.json
scripts/: demo_full_workflow.sh  memory_spike.py  run-evals.sh  run-tests.sh
specs/001-platform-infra/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-observability-redaction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-llm-provider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ingestion-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-incident-state-machine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-triage-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-incident-memory/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-knowledge-corpus/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-enrichment-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-response-remediation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-eval-harness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-detector/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-remediation-verification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-memory-feedback-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-ml-anomaly-detector/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/e2e/: test_anomaly_e2e.py  test_dashboard_e2e.py  test_dedup_e2e.py  test_detector_e2e.py  test_enrichment_e2e.py  test_feedback_e2e.py  test_ingest_e2e.py  test_ingest_redaction.py  test_llm_e2e.py  test_memory_e2e.py  test_observability_e2e.py  test_overhead.py  test_pipeline_dispositions.py  test_pipeline_e2e.py  test_response_e2e.py  test_smoke.py  test_triage_e2e.py  test_verification_e2e.py
tests/eval/: test_rationale_gate.py  test_rationale_redaction.py  test_redaction_gate.py  test_retrieval_gate.py  test_supervisor_routing_gate.py  test_temporal_gate.py  test_triage_gate.py
tests/helpers/: anomaly.py
tests/integration/: conftest.py  test_anomaly_emit.py  test_approvals_api.py  test_approvals_dashboard.py  test_auth_api.py  test_blob.py  test_container.py  test_dashboard_redaction.py  test_dedup.py  test_detector_emit.py  test_eval_report_minio.py  test_export_resilience.py  test_feedback_consume.py  test_feedback_dashboard.py  test_feedback_write.py  test_graphiti_memory.py  test_incident_acknowledge_repo.py  test_incident_repository.py  test_incidents_api.py  test_incidents_migration.py  test_kpis_api.py  test_lifecycle_teardown.py  test_llm_gemini_mapping.py  test_llm_ollama.py  test_llm_readiness.py  test_migrations.py  test_pipeline_api.py  test_precommit_gates.py  test_queue.py  test_ready.py  test_ready_redis.py  test_redaction_presidio.py  test_response_provider.py  test_startup_failfast.py  test_stream_sse.py  test_supervisor_pg.py  test_timeout_sweeper.py  test_trace_api.py  (+5 more)
(+321 files in other folders)
