[project]
name = "sentinel"
version = "0.1.0"
description = "AI-driven SOAR platform — Platform & Infrastructure Foundation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "aioboto3>=13.0",
    "tenacity>=8.3",
    "structlog>=24.1",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-api>=1.25",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "google-genai>=2.8.0",
    "ollama>=0.6.2",
    "redis>=5",
    "graphiti-core[google-genai]>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres,minio,neo4j]>=4.8",
    "import-linter>=2.1",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing"
markers = [
    "integration: requires real backing services (testcontainers/Docker)",
    "e2e: end-to-end compose smoke (requires Docker)",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    # Reserved stubs — not implemented yet, measured when their spec lands
    "backend/agents/enrichment.py",
    "backend/agents/response.py",
    "backend/routers/incidents.py",
    "backend/routers/approvals.py",
    "backend/infra/guardrails.py",
    # backend/infra/llm.py + llm_drivers.py + backend/domain/llm.py are now measured
    # (SPEC-llm-provider #3 — removed from omit list)
    # backend/infra/intel.py, repositories/corpus.py, services/corpus.py, seed_corpus.py
    # are measured (SPEC-knowledge-corpus #8 — not in omit list)
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PTH"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use os.path / open / subprocess and local fixture types.
"tests/**" = ["PTH"]

[tool.ruff.format]
quote-style = "double"

[tool.importlinter]
root_packages = ["backend"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Layered architecture: routers -> services -> agents -> repositories -> infra"
type = "layers"
layers = [
    "backend.routers",
    "backend.services",
    "backend.agents",
    "backend.repositories",
    "backend.infra",
]

[[tool.importlinter.contracts]]
name = "Domain is isolated"
type = "forbidden"
source_modules = ["backend.domain"]
forbidden_modules = [
    "backend.routers",
    "backend.services",
    "backend.agents",
    "backend.repositories",
    "backend.infra",
]

# No-bypass guard (FR-018): opentelemetry and presidio must only be imported
# from backend.infra.* — never from routers/services/agents/repositories/domain
# directly. Enforced structurally by the layered contract above (which prevents
# those layers from importing backend.infra's private helpers directly) and by
# code-review convention. A full transitive "forbidden" contract would require
# exhaustive ignore_imports entries for every valid infra-layer chain; the
# layered architecture contract is the authoritative structural guard.
#
# Ruff ban (direct-only, no transitives):
[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
