[project]
name = "argus"
version = "0.1.0"
description = "AI-driven SOAR platform — Platform & Infrastructure Foundation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "aioboto3>=13.0",
    "pyyaml>=6",
    "tenacity>=8.3",
    "structlog>=24.1",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-api>=1.25",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "google-genai>=2.8.0",
    "ollama>=0.6.2",
    "redis>=5",
    "graphiti-core[google-genai]>=0.3",
    "pyjwt>=2.13.0",
    "scikit-learn>=1.5",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres,minio,neo4j]>=4.8",
    "import-linter>=2.1",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "httpx>=0.27",
    "pandas>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Coverage is NOT enabled by default: plain `pytest` / `make test-unit` stays
# fast and light (avoids the OOM from coverage instrumentation + testcontainers
# in one process). Coverage is opt-in via `make cov` and the CI coverage gate.
addopts = "--strict-markers"
markers = [
    "integration: real backing service via testcontainers (Docker; real images, disposable per module)",
    "e2e: in-process end-to-end flow with mocked providers (no Docker)",
    "needs_compose: requires the full `docker compose` stack to be up (true end-to-end)",
]

[tool.coverage.run]
source = ["backend"]
# relative_files lets coverage data from separate CI jobs (fast + integration,
# different runners) be combined with `coverage combine` before the 80% gate.
relative_files = true
omit = [
    # ── Not gated by unit/integration line coverage ──────────────────────────
    # Composition roots & daemon entrypoints: pure DI wiring + process loops.
    # These are exercised by the real-stack `smoke` tier (compose up → /ready,
    # plus the worker container), NOT by in-process unit/integration tests.
    # Gating line coverage on __main__ loops and lifespan wiring is noise, so
    # they are validated by the e2e/compose tier instead of this gate.
    "backend/main.py",
    "backend/worker.py",
    "backend/supervisor_provider.py",
    "backend/corpus_provider.py",
    # Standalone one-shot CLI entrypoint (`seed-corpus`), not application runtime.
    "backend/seed_corpus.py",
    # Standalone one-shot CLI entrypoints (#14 detector, #17 anomaly
    # train/detect), same class as seed-corpus above: invoked as
    # `python -m backend.<name>`, not application runtime. Validated by the
    # eval gates + smoke/e2e tier, not this line-coverage gate.
    "backend/detector.py",
    "backend/anomaly_train.py",
    "backend/anomaly_detector.py",
    # Reserved stub — measured when its spec lands.
    "backend/infra/guardrails.py",
    # Implemented + measured (removed from omit as their specs landed):
    #   infra/llm*.py, domain/llm.py        (#3 llm-provider)
    #   infra/intel.py, *corpus*.py         (#8 knowledge-corpus)
    #   agents/response.py, routers/approvals.py, routers/incidents.py (#10/#12)
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PTH"]
# E501 (line-too-long) is delegated to the formatter, which wraps code lines;
# remaining long lines are URLs/strings/comments not worth manual breaking.
# This matches the AIE Engineering Standards companion guide (§8).
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use os.path / open / subprocess and local fixture types.
"tests/**" = ["PTH"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Query/Path/Header/Security are call-in-default by design;
# they are immutable markers, not the mutable-default footgun B008 targets.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Security",
]

[tool.ruff.format]
quote-style = "double"

[tool.importlinter]
root_packages = ["backend"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Layered architecture: routers -> services -> agents -> repositories -> infra"
type = "layers"
layers = [
    "backend.routers",
    "backend.services",
    "backend.agents",
    "backend.repositories",
    "backend.infra",
]

[[tool.importlinter.contracts]]
name = "Domain is isolated"
type = "forbidden"
source_modules = ["backend.domain"]
forbidden_modules = [
    "backend.routers",
    "backend.services",
    "backend.agents",
    "backend.repositories",
    "backend.infra",
]

# No-bypass guard (FR-018): opentelemetry, presidio, scikit-learn and joblib
# must only be imported from backend.infra.* — never from routers/services/agents/
# repositories/domain directly. Enforced structurally by the layered contract above
# (which prevents those layers from importing backend.infra's private helpers directly)
# and by code-review convention. A full transitive "forbidden" contract would require
# exhaustive ignore_imports entries for every valid infra-layer chain; the layered
# architecture contract is the authoritative structural guard.
#
# scikit-learn/joblib addendum: the only legitimate importers are backend.infra.*,
# the offline training entrypoint backend.anomaly_train, and the eval gate
# backend.eval.gates.anomaly_detection. Unit/integration/e2e tests inject a
# FakeAnomalyModel and never load sklearn.
[[tool.importlinter.contracts]]
name = "No sklearn/joblib bypass"
type = "forbidden"
source_modules = [
    "backend.domain",
    "backend.services",
    "backend.agents",
    "backend.repositories",
    "backend.routers",
]
forbidden_modules = [
    "sklearn",
    "joblib",
]
ignore_imports = [
    "backend.infra.anomaly_model -> sklearn",
    "backend.infra.anomaly_model -> joblib",
    "backend.anomaly_train -> sklearn",
    "backend.anomaly_train -> joblib",
]

# Ruff ban (direct-only, no transitives):
[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
